# financial-sentiment-analysis

./: .env  .gitignore  main.py  pyproject.toml  requirements.txt
