[tool.poetry]
name = "Financial Sentiment Analysis"
version = "0.1.0"
description = ""
authors = ["Breno Fernandes <brenojesusfernandes@pm.com>"]

[tool.poetry.dependencies]
python = "3.7.4"
transformers = "4.18.0"
torch = "1.11.0"
loguru = "0.6.0"
pandas = "1.3.0"
XlsxWriter = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
